--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1 style="text-align: center; color: white; font-family: Arial, sans-serif;">Press Space</h1>
+    <h1 style="text-align: center; color: white; font-family: Arial, sans-serif;">Press Space or Tap Anywhere</h1>
 </body>
 </html>
+
 
